# server/src/nodes/core/coreConstant.ts
@@ -1,8 +1,10 @@
+import {GrNodeDefIcon} from '@/graph/dtos/gr-node-def.dto';
 import {aig} from '@/nodes/aig/aig';
 
 export const coreConstant = aig
     .node({
         type: 'constant',
+        icon: GrNodeDefIcon.CORE,
         description: 'A constant value'
     })
     .inputs((ctx) => ({
